manifests/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supplychainvisibility-ingress
  namespace: supplychainvisibility
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: "production-static-ip"
    networking.gke.io/managed-certificates: "supplychainvisibility-cert"
    cert-manager.io/cluster-issuer: letsencrypt 
spec:
  tls:
    - hosts:
        - gke.golive.settyl.com
      secretName: supplychainvisibility-tls 
  rules:
    - host: gke.staging.golive.settyl.com 
      http:
        paths:
          - path: /api/healthcheck
            pathType: Prefix
            backend:
              service:
                name: configmanagementapi
                port:
                  number: 8000
